# stirtrace

./: README.md  build-nogui.nix  build-static-nogui.nix  build-static.nix  build.nix  flake.nix  terminal.patch
.github/workflows/: release.yml  windows-release.yml
QT_StirTrace_v4.0/: .clang-format  CMakeLists.txt  IBinaryFileReader.h  IBinaryFileWriter.h  QT_StirTrace.pro  README  ddrawreader.cpp  ddrawreader.h  ddrawwriter.cpp  ddrawwriter.h  evaluation.cpp  evaluation.h  filehandler.cpp  filehandler.h  imgproc.cpp  imgproc.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preprocessing.cpp  preprocessing.h
